fixed spacing on home page

--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -242,10 +242,12 @@ button:hover {
 /* HOBBIES SECTION ----------------------------------- */
 
 .hobbies-h5 {
-  padding: 15px 0;
+  padding-bottom: 40;
+  padding-top: 20px;
   text-align: center;
   margin-bottom: -15px;
-  margin-top: 15px
+  margin-top: -25px;
+
 }
 
 
